fixed hover effect on free plan right aligned package

--- a/packages/packages.css
+++ b/packages/packages.css
@@ -50,6 +50,11 @@ main {
     text-align: right;
 }
 
+#free:hover,
+#free:active {
+    border-color: #ff5454;
+}
+
 #premium {
     background-color: rgba(14, 79, 31, 0.95);
 }
